--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 <head>
 <title>Anu Khatri</title>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
+<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
 <body>
-<table width="100%" border="0" cellspacing="0" cellpadding="0">
+<!--<table width="100%" border="0" cellspacing="0" cellpadding="0">
   <tr>
     <td align="center"><h3><font color="#990000">HOWDY!!</font></h3></td>
   </tr>
@@ -14,6 +15,8 @@
     <td align="center"><font color="#800080"><br><br>Anu Khatri</font></td>
   </tr>
 </table>
+-->
+
 
 </body>
 </html>
