--- a/index.html
+++ b/index.html
@@ -4,9 +4,11 @@
 <title>Anu Khatri</title>
 <meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
 <link rel="stylesheet" type="text/css" href="style.css">
+<link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
+<link href="https://fonts.googleapis.com/css?family=Montserrat:100,200,300" rel="stylesheet">
 </head>
 
-<body>
+<body class="background">
 <!--<table width="100%" border="0" cellspacing="0" cellpadding="0">
   <tr>
     <td align="center"><h3><font color="#990000">HOWDY!!</font></h3></td>
@@ -16,7 +18,22 @@
   </tr>
 </table>
 -->
-
+<div class="w3-top">
+  <div class="navbar">
+    <a href="#" >HOME</a>
+    <a href="about-me.html">ABOUT ME</a>
+    <a href="portfolio.html">PORTFOLIO</a>
+    <a href="qualifications.html">QUALIFICATIONS</a>
+    <a href="service.html">SERVICE</a>
+  </div>  
+</div>
+<img class="img-profile" src="profile.jpg" alt="Profile of Anu Khatri"> 
+<p class="intro">
+  Howdy!
+</p>
+<p class="intro2">
+  I'm Anu Khatri
+</p>
 
 </body>
 </html>
