--- a/index.html
+++ b/index.html
@@ -9,18 +9,9 @@
 </head>
 
 <body class="background">
-<!--<table width="100%" border="0" cellspacing="0" cellpadding="0">
-  <tr>
-    <td align="center"><h3><font color="#990000">HOWDY!!</font></h3></td>
-  </tr>
-  <tr>
-    <td align="center"><font color="#800080"><br><br>Anu Khatri</font></td>
-  </tr>
-</table>
--->
 <div class="w3-top">
   <div class="navbar">
-    <a href="#" >HOME</a>
+    <a href="#" class="active">HOME</a>
     <a href="about-me.html">ABOUT ME</a>
     <a href="portfolio.html">PORTFOLIO</a>
     <a href="qualifications.html">QUALIFICATIONS</a>
