--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <title>Anu Khatri</title>
-<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1">
+<meta http-equiv="Content-Type" content="text/html; UTF-8">
 <link rel="stylesheet" type="text/css" href="style.css">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
 <link href="https://fonts.googleapis.com/css?family=Montserrat:100,200,300" rel="stylesheet">
@@ -18,7 +18,7 @@
     <a href="service.html">SERVICE</a>
   </div>  
 </div>
-<img class="img-profile" src="profile.jpg" alt="Profile of Anu Khatri"> 
+<img class="profile" src="profile.jpg" alt="Profile of Anu Khatri"> 
 <p class="intro">
   Howdy!
 </p>
