--- a/secret.html
+++ b/secret.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN">
 <html>
 <head>
-<title>Qualifications</title>
+<title>Secret</title>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 <link rel="stylesheet" type="text/css" href="style.css">
 <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -14,24 +14,13 @@
     <a href="index.html">HOME</a>
     <a href="about-me.html">ABOUT ME</a>
     <a href="portfolio.html">PORTFOLIO</a>
-    <a class="active" href="#">QUALIFICATIONS</a>
+    <a href="qualifications.html">QUALIFICATIONS</a>
     <a href="service.html">SERVICE</a>
   </div>  
 </div>
-<div>
-    <p class="intro4">
-        Qualifications
-    </p>
-</div>
-
-
-<div class="container1">
-    <p class="p-block">
-        I have experience in C++, Java, Python, HTML, and CSS. Additionally, this past summer, I learned and worked with React, GraphQL, and Storybook. <br>
-        I am interested in front-end development, so I am taking classes, such as Graphic Design this semester in order to better understand UX. 
-    </p>
-</div>
-
-
-</body>
-</html>
+<p class="intro">
+  Howdy!
+</p>
+<p class="intro2">
+  Welcome to the secret page :)
+</p>
