--- a/qualifications.html
+++ b/qualifications.html
@@ -31,6 +31,14 @@
         I am interested in front-end development, so I am taking classes, such as Graphic Design this semester in order to better understand UX. 
     </p>
 </div>
+<div>
+  <p class="intro4">
+      Resume
+  </p>
+</div>
+<div class="container1">
+  <embed src="resume_khatri_2020.pdf" type="application/pdf" width=100% height=100%>
+</div>
 
 
 </body>
