Peer Review Updates

--- a/portfolio.html
+++ b/portfolio.html
@@ -51,7 +51,7 @@ I participated in A&M’s hackathon in January 2020. I made a website called <a 
     </p>
     <p class="p-block">
         
-I have been the Historian for the Hindu Students Association at Texas A&M for two years. Last year, I completely updated the design of the <a href="https://hsatamu.wixsite.com/hsatamu">website</a>, and I added a lot more relevant content. I continuously update the site with new content, such as when we are advertising upcoming events. 
+I have been the Historian for the Hindu Students Association at Texas A&M for two years. Last year, I completely updated the design of the <a href="https://hsatamu.wixsite.com/hsatamu">website</a>, and I added a lot more relevant content. I continuously update the site with new content, such as when we are advertising upcoming events. I have increased our engagement, which has resulted in our organization's membership growing. 
     </p>
 </div>
 
