--- a/service.html
+++ b/service.html
@@ -26,12 +26,18 @@
 
 
 <div class="container1">
+    <p class="p-title">
+        W.H.O.O.P
+    </p>
     <p class="p-block">
         Through <a href="https://whooptamu.wixsite.com/whooptamu">W.H.O.O.P. (Women Helping Out Other People)</a>, a women’s organization I am in, I have done many service projects in the Bryan/College Station community. We have adopted a street, which we clean monthly. Additionally, we have volunteer opportunities throughout the semester. In February, I volunteered at a Valentine’s Day Daddy/Daughter Dance for the Children’s Museum of Brazos Valley. 
     </p>
 </div>
 
 <div class="container1">
+    <p class="p-title">
+        Girl Scouts
+    </p>
     <p class="p-block">
         In high school, I was in Girl Scouts. The Girl Scouts has a project called the <a href="https://www.girlscouts.org/en/for-girls/gold-award-girl-scouts.html">Gold Award</a>, which is a 100-hour+ project that has a lasting impact on the community. My focus was on music education, so I held a music supply drive that benefited the non-profit organization <a href="https://www.musicaboveall.org/">Music Above All</a>, which helps low-income students with providing music supplies and private lessons. Additionally, I designed and held a music education workshop which helped expose young children to music through fun activities, such as musical bingo and twister. At the workshop, I also gave a presentation to the parents, and I talked about the importance of music education and the benefit of being involved in music while growing up. This is important to me because being involved in band through middle school and high school has greatly shaped me into the person I am today. 
     </p>
