Peer Review Content Changes

--- a/index.html
+++ b/index.html
@@ -26,5 +26,9 @@
   I'm Anu Khatri
 </p>
 
+<p class="side">
+  <a href="https://www.pexels.com/photo/blue-and-purple-cosmic-sky-956999/">Background by Felix Mittermeier from Pexels</a>
+</p>
+
 </body>
 </html>
