--- a/qualifications.html
+++ b/qualifications.html
@@ -35,6 +35,11 @@
   <p class="intro4">
       Resume
   </p>
+  <div class="container1">
+    <p class="p-title2">
+      <a href="https://www.linkedin.com/in/anu-khatri41/">LinkedIn</a>
+    </p>
+  </div>
 </div>
 <div class="container1">
   <embed src="resume_khatri_2020.pdf" type="application/pdf" width=100% height=100%>
